--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,204 @@
-body {
+html, body {
+  height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
+}
+
+.header {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 15vw;
+  margin-right: auto; /* Лого будет располагаться слева */
+}
+.logo img {
+  width: 50%; /* Ширина логотипа составляет 50% ширины header */
+}
+
+.title {
+  font-size: 1.6vw;
+  text-align: center; /* Название будет по центру */
+  flex-grow: 1; /* Занимает оставшееся доступное пространство */
+}
+
+
+
+.logo,
+.title,
+.main-menu,
+.contact-info,
+.btn-leave-request {
+  display: inline-block;
+  vertical-align: top; /* чтобы выровнять блоки по верхнему краю */
+}
+.contact-info {
+  padding: 2vw;
+  margin-left: auto; /* Контактная информация будет располагаться справа */
+}
+.contact-info p {
+  font-size: 1.1vw;
+}
+.btn-leave-request {
+  font-size: 1vw;
+  margin-right: 5vw;
+}
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+
+}
+
+.ReactModal__Overlay--after-open{
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close{
+  opacity: 0;
+}
+
+.Modal {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9999;
+  background-color: #FFFFFF4D;
+  width: 33.28vw;
+  height: 25.49vw;
+  padding: 1.46vw;
+  border-radius: 1.37vw;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  max-height: 90vh;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: transparent transparent;
+}
+.textarea-sms {
+  max-width: 33vw;
+  min-width: 15vw;
+  min-height: 10vw;
+}
+.Modal::-webkit-scrollbar {
+  width: 0.5vw; /* Ширина скроллбара */
+}
+.Modal .popup-h1 {
+  margin-left: 3vw;
+}
+.Modal::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Цвет ползунка скроллбара */
+}
+
+.Modal::-webkit-scrollbar-track {
+  background-color: transparent; /* Цвет трека скроллбара */
+}
+
+.content-container-modal {
+  margin-left: 5vw;
+}
+.popup-content-wrapper {
+}
+
+
+.Modal input,
+.Modal textarea,
+.Modal button {
+  margin-bottom: 1vw; /* Добавляет отступ между элементами */
+}
+
+
+
+
+.Overlay {
+  /*backdrop-filter: blur(10px); !* Размытие заднего фона *!*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9998;
+}
+
+
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Высота равная высоте видимой области экрана */
+  background-color: gray;
+  background-size: cover;
+  width: 100%;
+  font-size: 0.83vw;
+}
+.slider {
+  max-width: 85%; /* Максимальная ширина слайдера */
+  text-align: center; /* Центрирование элементов внутри слайдера */
+}
+.slider img {
+  margin-left: 20vw;
+  width: 50%; /* Ширина изображения будет равна ширине родительского контейнера */
+  height: auto; /* Автоматическое масштабирование высоты (сохранение пропорций) */
+}
+
+.footer {
+  position: absolute;
+  width: 100%;
+  height: 10vw;
+  background-color: #f0f0f0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 767px) {
+  .Modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    background-color: #FFFFFF4D;
+    width: 89.33vw;
+    height: auto;
+    min-height: 89vw;
+    padding: 1.46vw;
+    border-radius: 0.37vw;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  }
+  .textarea-sms {
+    overflow: auto;
+    min-width: 63vw;
+    max-width: 88vw;
+  }
 }
